schema/testdata/errors/relationships_attr_must_be_on_model_field.keel
model Post {
    fields {
        //expect-error:21:30:RelationshipError:The @relation attribute cannot be used on non-model fields
        author Text @relation(author)
    }
}

model Author {
    fields {
        author Post
    }
}
